fix: fixed navigation focus indicator overflow

--- a/src/components/Navigation/core/navigation.module.css
+++ b/src/components/Navigation/core/navigation.module.css
@@ -26,7 +26,7 @@
 
         display: grid;
         grid-template-rows: 1fr;
-        gap: var(--md-sys-layout-space-16);
+        gap: calc(10 * var(--dp, 1px));
 
         padding-block: var(--md-sys-layout-space-16);
 
